--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "kitsu": "^5.0.7",
+        "leaflet": "^1.3.1"
     }
 }
